--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,14 +22,14 @@ title: Kafka Topic Visualizer
 email: williambratz00@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Kafka Topic Visualizer
-baseurl: "/docs" # the subpath of your site, e.g. /blog
+baseurl: "/KafkaTopicVisualizer" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username: wbratz
 
 # Build settings
-theme: minima
-plugins:
+theme: Midnight
+plugins:KafkaTopicVisualizer
   - jekyll-feed
 # Exclude from processing.
 # The following items will not be processed, by default.
