--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,8 +28,8 @@ twitter_username:
 github_username: wbratz
 
 # Build settings
-theme: minima
-plugins:KafkaTopicVisualizer
+theme: midnight
+plugins:
   - jekyll-feed
 # Exclude from processing.
 # The following items will not be processed, by default.
