--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,9 +28,10 @@ twitter_username:
 github_username: wbratz
 
 # Build settings
-theme: Midnight
+remote_theme: pages-themes/midnight@v0.2.0
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
