--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,15 +22,16 @@ title: Kafka Topic Visualizer
 email: williambratz00@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Kafka Topic Visualizer
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/Kafka Topic Visualizer" # the subpath of your site, e.g. /blog
+url: "http://wbratz.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username: wbratz
 
 # Build settings
-theme: minima
+remote_theme: pages-themes/midnight@v0.2.0
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
